# SPM

./: CMakeLists.txt
config/: manipulationRule
header/Manipulator/: SIPManipulator.h
header/SIPParser/: SIPParser.h  SIP_Message.h
header/config/: Config.h  Gate.h
header/session/: SessionLayer.h
header/transport/: UDP_transport.h
header/utils/: types.h  utils.h
source/: main.cpp
source/SIPParser/: SIPParser.cpp
source/transport/: UDP_transport.cpp
tests/: main.cpp
